--- a/static/stat572/lab_stat572.Rmd
+++ b/static/stat572/lab_stat572.Rmd
@@ -2,8 +2,8 @@
 title: "Bayesian by R"
 output:
   html_document:
-    toc: true
-    toc_float: true
+    toc: false
+    toc_float: false
   html_notebook: default
   pdf_document: default
 ---
