--- a/static/stat572/hw_stat572.Rmd
+++ b/static/stat572/hw_stat572.Rmd
@@ -15,17 +15,17 @@ STAT 572
 
 ## HW1
 
-### 1
+### 1 A Exponential Case
 
 We write $Y\sim Exp(\theta)$ to indicate that Y has the Exponential distribution, that is, its p.d.f. is 
 
-$p(y|θ) = Exp(y|θ) = θe−θy1{y>0}$
+$p(y|θ) = Exp(y|θ) = θe−θy1_{\{y>0\}}$
 
 The Exponential distribution has some special properties that make it a good model for certain applications. It has been used to model the time between events (such as neuron spikes, website hits, neutrinos captured in a detector), extreme values such as maximum daily rainfall over a period of one year, or the amount of time until a product fails (lightbulbs are a standard example). Suppose you have data $y_1,...,y_n$ which you are modeling as iid observations from an Exponential distribution, and suppose that your prior is $\theta\sim Gamma(a,b)$, deﬁned as in the previous question. 
 
-(a). Derive the formula for the posterior density, p(θ|y1:n). Give the form of the posterior in terms of one of the following distributions: Bernoulli, Beta, Exponential, and Gamma
+(a). Derive the formula for the posterior density, $p(\theta|y_{1:n})$. Give the form of the posterior in terms of one of the following distributions: Bernoulli, Beta, Exponential, and Gamma
 
-(b).  Now, suppose you are measuring the number of seconds between lightning strikes during a storm, your prior is Gamma(0.1,1.0), and your data is
+(b). Now, suppose you are measuring the number of seconds between lightning strikes during a storm, your prior is Gamma(0.1,1.0), and your data is
 
 $(y_1,...,y_8) = (20.9,69.7,3.6,21.8,21.4,0.4,6.7,10.0)$
 
@@ -42,7 +42,7 @@ Plot the prior and posterior pdf’s. (Be sure to make your plots on a scale tha
 
 
 
-### 2
+### 2 A Poisson Case
 
 An ecologist records the number of eggs laid in a sample of sparrow nests of size $n=20$. Let $Y_i$ be the number of eggs laid in nest i for $i=1,...,20$. Based on this sample, the ecologist is interested in estimating $\theta$, the mean number of eggs per nest in the general population of nests. Assume $Y_1,...,Y_n|\theta\sim Poisson(\theta)$ iid, and also for now that $\theta\in\Theta=\{0.1,0.2,...,4.9,5.0\}$ and that $p(\theta) = 1/50$ for each $\theta\in\Theta$.
 
@@ -76,20 +76,20 @@ An ecologist records the number of eggs laid in a sample of sparrow nests of siz
 ```
 
 
-### 3
+### 3  posterior predictive density
 
-Suppose the data y1:n|θ is modeled as iid Exp(θ), and the prior is 
+Suppose the data $y_{1:n}|\theta$ is modeled as iid $Exp(\theta)$, and the prior is 
 
 $p(\theta) = Gamma(\theta|a,b) = b^a \Gamma(a) \theta^{a−1}e^{−b\theta}1_{\{θ>0\}}$
 
-From problem 1, we know that the posterior is p(θ|y1:n) = Gamma(θ|an,bn), where an = a+n and bn = b+Pn i=1 yi. What is the posterior predictive density p(yn+1|y1:n)? Give your answer as a closed-form expression (not an integral). 
+From problem 1, we know that the posterior is $p(\theta|y_{1:n}) = Gamma(\theta|a_n,b_n)$, where $a_n=a+n$ and $b_n=b+\sum^n_{i=1} y_i$. What is the posterior predictive density $p(y_{n+1}|y_{1:n})$? Give your answer as a closed-form expression (not an integral). 
 
 
 
 
 ### 4 (decision theory)
 
-Suppose that in the small imaginary city of our class example, where the prevalence of a rare disease was studied (Foundations: Section 4, page 11), public health oﬃcials need to decide the amount of resources to allocate towards prevention and treatment of the disease we are concerned with, with the fraction of infected individuals $\theta$ still unknown. They will decide on the resources needed based on a fraction c of the population. If c is chosen too large, there will be wasted resources, while if it is too small, preventable cases may occur and some individuals may go untreated. After some deliberation, they tentatively adopt the following loss function:
+Suppose that in the small imaginary city of our class example, where the prevalence of a rare disease was studied (Foundations: Section 4, page 11), public health oﬃcials need to decide the amount of resources to allocate towards prevention and treatment of the disease we are concerned with, with the fraction of infected individuals $\theta$ still unknown. They will decide on the resources needed based on a fraction $c$ of the population. If $c$ is chosen too large, there will be wasted resources, while if it is too small, preventable cases may occur and some individuals may go untreated. After some deliberation, they tentatively adopt the following loss function:
 
 $l(\theta,c)=(\theta−c + 0.5)^2$ for $c\in[0,1]$
 
@@ -104,7 +104,7 @@ $l(\theta,c)=(\theta−c + 0.5)^2$ for $c\in[0,1]$
 ```
 
 
-(d). Compare the outcome from the Bayesian decision procedure to the procedures that choose (i) $c=\bar y$ and (ii) $c=0.1$ constant (i.e., setting it to the prior mean). This comparison can be done by observing the optimal quantity $c$ derived from each of the decision procedures considered while varying the value of y (the number of infected cases).
+(d). Compare the outcome from the Bayesian decision procedure to the procedures that choose (i) $c=\bar y$ and (ii) $c=0.1$ constant (i.e., setting it to the prior mean). This comparison can be done by observing the optimal quantity $c$ derived from each of the decision procedures considered while varying the value of $y$ (the number of infected cases).
 
 
 
