--- a/static/stat671/note_stat671.tex
+++ b/static/stat671/note_stat671.tex
@@ -88,6 +88,9 @@
 \setlength\tabcolsep{0.1pt}
 \setlength\lineskip{0pt}
 \setlength\parskip{0pt}
+\textbackslash{}begin\{document\}
+\thispagestyle{empty}
+\includegraphics{../../../psulogo_horiz_bw.eps}\hfill\includegraphics{../../../deptlogo}
 
 \begin{document}
 
@@ -95,7 +98,7 @@
 \setlength\lineskip{0pt}
 \setlength\parskip{0pt}
 
-\#\fontsize{8pt}{0pt} \#\footnotesize \setlength{\columnseprule}{0.1pt}
+\setlength{\columnseprule}{0.1pt}
 
 \hypertarget{section}{%
 \section{}\label{section}}
@@ -133,6 +136,10 @@ Exercise:
 \(b=\frac12\left[\frac1{n_{-}^2}\sum\limits_{(i,j)\in I_{-}}<x_i,x_j>-\frac1{n_{+}^2}\sum\limits_{(i,j)\in I_{+}}<x_i,x_j>\right]\)
 
 \(\alpha_i=\begin{cases}\frac1{n_{+}}&y_i=+1\\-\frac1{n_{-}}&y_i=-1\end{cases}\)
+
+\textbackslash{}end\{document\}
+
+\#\fontsize{8pt}{0pt} \#\footnotesize
 
 \begin{multicols}{2}
 \end{multicols}
